0.12.x/_sources/api/skimage.data.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`data`
===================
.. automodule:: skimage.data

.. currentmodule:: skimage.data
.. autosummary::

   skimage.data.astronaut
   skimage.data.binary_blobs
   skimage.data.camera
   skimage.data.checkerboard
   skimage.data.chelsea
   skimage.data.clock
   skimage.data.coffee
   skimage.data.coins
   skimage.data.horse
   skimage.data.hubble_deep_field
   skimage.data.immunohistochemistry
   skimage.data.imread
   skimage.data.lena
   skimage.data.load
   skimage.data.moon
   skimage.data.page
   skimage.data.rocket
   skimage.data.text
   skimage.data.use_plugin

   skimage.data.deprecated

astronaut
---------

.. autofunction:: skimage.data.astronaut

binary_blobs
------------

.. autofunction:: skimage.data.binary_blobs

camera
------

.. autofunction:: skimage.data.camera

checkerboard
------------

.. autofunction:: skimage.data.checkerboard

chelsea
-------

.. autofunction:: skimage.data.chelsea

clock
-----

.. autofunction:: skimage.data.clock

coffee
------

.. autofunction:: skimage.data.coffee

coins
-----

.. autofunction:: skimage.data.coins

horse
-----

.. autofunction:: skimage.data.horse

hubble_deep_field
-----------------

.. autofunction:: skimage.data.hubble_deep_field

immunohistochemistry
--------------------

.. autofunction:: skimage.data.immunohistochemistry

imread
------

.. autofunction:: skimage.data.imread

lena
----

.. autofunction:: skimage.data.lena

load
----

.. autofunction:: skimage.data.load

moon
----

.. autofunction:: skimage.data.moon

page
----

.. autofunction:: skimage.data.page

rocket
------

.. autofunction:: skimage.data.rocket

text
----

.. autofunction:: skimage.data.text

use_plugin
----------

.. autofunction:: skimage.data.use_plugin


:class:`deprecated`
-------------------


.. autoclass:: deprecated
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__
